--- a/Oppgave 03/oppgave03.html
+++ b/Oppgave 03/oppgave03.html
@@ -25,8 +25,8 @@
 
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="Script/jquery-ui.min.js" charset="utf-8"></script>
-  <script src="Script/oppgave03.js" charset="utf-8"></script>
-  <script src="Script/oppgave03_2.js" charset="utf-8"></script>
+  <script src="Script/module.js" charset="utf-8"></script>
+  <script src="Script/app.js" charset="utf-8"></script>
 </body>
 
 </html>
