updated files for Onordbo

--- a/Oppgave 02/oppgave02.html
+++ b/Oppgave 02/oppgave02.html
@@ -9,8 +9,10 @@
 
 <body>
   <div id="container">
+    <h1 id="header">Marsvinutstilling</h1>
 
     <section id="slideshowContainer">
+
 
         <section id="slideshow"></section>
 
