--- a/Oppgave 02/oppgave02.html
+++ b/Oppgave 02/oppgave02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,25 +8,20 @@
 </head>
 
 <body>
+
+  <!-- content -->
   <div id="container">
-    <h1 id="header">Marsvinutstilling</h1>
-
+    <h1 id="header">Pagetitle</h1>
     <section id="slideshowContainer">
-
-
         <section id="slideshow"></section>
-
         <img id="forrigeBildeBtn" role="button" src="slidebilder/arrow-left.png">
         <img id="nesteBildeBtn" role="button" src="slidebilder/arrow-right.png">
+    </section>
+  </div>
 
-    </section><!--end slideshowContainer-->
-
-</div><!-- end container -->
-    <!--scripts-->
-
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="scripts/webpageImagesModule.js"></script>
-    <script src="scripts/app.js"></script>
+  <!-- js -->
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="scripts/webpageImagesModule.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
-
 </html>
