--- a/Oppgave 03/oppgave03.html
+++ b/Oppgave 03/oppgave03.html
@@ -15,7 +15,7 @@
       <label>Land:</label>
       <input id="searchDataTxt" type="text" name="name" placeholder="Søk etter land">
       <input id="searchLandBtn" type="button" value="Søk etter land">
-      <input id="searchAllBtn"  type="button" value="Velg alle destinasjoner">
+      <input id="searchAllBtn"  type="button" value="Vis alle destinasjoner">
       <hr>
 
       <section class="landOutput"></section>
