updated files before deadlien

--- a/Oppgave 01/oppgave01.html
+++ b/Oppgave 01/oppgave01.html
@@ -7,14 +7,15 @@
 <body>
 
   <section>
-    <h3>Traversering og elementskapelse</h3>
+    <h1>Traversering og elementskapelse</h1>
     Antall div´er å generere:
     <input id="inputDivAmount" type="text" placeholder="put inn antall">
     <input id="submitBtn" type="submit" value="Generer">
     <section id="mangeDivSection"></section>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="script/oppgave01.js" charset="utf-8"></script>
+    <script src="script/module.js" charset="utf-8"></script>
+    <script src="script/app.js" charset="utf-8"></script>
   </section>
 
 </body>
