--- a/Oppgave 02/oppgave02.html
+++ b/Oppgave 02/oppgave02.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slideshow</title>
-    <link rel="stylesheet" href="css/oppgave02.css" charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Slideshow</title>
+  <link rel="stylesheet" href="css/oppgave02.css" charset="utf-8">
 </head>
 
 <body>
@@ -14,19 +15,27 @@
     <section id="slideshowContainer">
 
 
-        <section id="slideshow"></section>
+      <section id="slideshow"></section>
 
-        <img id="forrigeBildeBtn" role="button" src="slidebilder/arrow-left.png">
-        <img id="nesteBildeBtn" role="button" src="slidebilder/arrow-right.png">
+      <img id="forrigeBildeBtn" role="button" src="slidebilder/arrow-left.png">
+      <img id="nesteBildeBtn" role="button" src="slidebilder/arrow-right.png">
 
-    </section><!--end slideshowContainer-->
+    </section>
+    <!--end slideshowContainer-->
+    <div id="infoContainer">
+      <h3>Info om marsvinene</h3>
+      <div>Trykk på bildene får å få info om Marsvinene</div>
+      <div id="infoPopup"></div>
+    </div>
 
-</div><!-- end container -->
-    <!--scripts-->
 
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="scripts/webpageImagesModule.js"></script>
-    <script src="scripts/app.js"></script>
+  </div>
+  <!-- end container -->
+  <!--scripts-->
+
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="scripts/webpageImagesModule.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 
 </html>
