siste update for I01

--- a/Oppgave 01/oppgave01.html
+++ b/Oppgave 01/oppgave01.html
@@ -1,3 +1,4 @@
+<!-- Jørn Lyder hansen Innlevering 01 Oppgave 01 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,8 @@
   <title>Oppgave 01</title>
 </head>
 <body>
-
-  <section>
+  <!-- container for everything on the page -->
+  <section id="container">
     <h1>Traversering og elementskapelse</h1>
     Antall div´er å generere:
     <input id="inputDivAmount" type="text" placeholder="put inn antall">
@@ -16,7 +17,7 @@
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="script/module.js" charset="utf-8"></script>
     <script src="script/app.js" charset="utf-8"></script>
-  </section>
+  </section> <!-- end container -->
 
 </body>
 </html>
