--- a/Oppgave 02/oppgave02.html
+++ b/Oppgave 02/oppgave02.html
@@ -1,3 +1,4 @@
+<!-- Jørn Lyder hansen Innlevering 01 Oppgave 02 -->
 <!DOCTYPE html>
 <html lang="">
 
@@ -14,25 +15,22 @@
 
     <section id="slideshowContainer">
 
-
       <section id="slideshow"></section>
-
       <img id="forrigeBildeBtn" role="button" src="slidebilder/arrow-left.png">
       <img id="nesteBildeBtn" role="button" src="slidebilder/arrow-right.png">
-
     </section>
     <!--end slideshowContainer-->
+
     <div id="infoContainer">
       <h3>Info om marsvinene</h3>
-      <div>Trykk på bildene får å få info om Marsvinene</div>
+      <div>Trykk på bildene for å få info om Marsvinene</div>
       <div id="infoPopup"></div>
     </div>
 
-
   </div>
   <!-- end container -->
-  <!--scripts-->
 
+  <!--scripts-->
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="scripts/webpageImagesModule.js"></script>
   <script src="scripts/app.js"></script>
