--- a/Oppgave 03/oppgave03.html
+++ b/Oppgave 03/oppgave03.html
@@ -1,3 +1,4 @@
+<!-- Jørn Lyder hansen Innlevering 01 Oppgave 03 -->
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
@@ -8,7 +9,6 @@
 
 <body>
   <div id="container">
-
     <section id="searchSection">
       <h1 id="headTxt">Mitt Ferie Sted</h3>
       <label>Land:</label>
@@ -16,12 +16,11 @@
       <input id="searchLandBtn" class="btn" type="button" value="Søk etter land">
       <input id="searchAllBtn"  class="btn" type="button" value="Velg alle destinasjoner">
       <hr>
-
       <section class="landOutput"></section>
-    </section>
+    </section> <!-- end searchSection -->
+  </div> <!-- end container -->
 
-  </div>
-
+  <!-- scripts -->
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="Script/jquery-ui.min.js" charset="utf-8"></script>
   <script src="Script/module.js" charset="utf-8"></script>
